--- a/KooliProjekt.IntegrationTests/appsettings.json
+++ b/KooliProjekt.IntegrationTests/appsettings.json
@@ -1,5 +1,16 @@
 {
   "ConnectionStrings": {
     "TestConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-KooliProjekt-Integration;Trusted_Connection=True;MultipleActiveResultSets=true"
+    {
+      "profiles": {
+        "TestEnvironment": {
+          "commandName": "Project",
+          "environmentVariables": {
+            "ASPNETCORE_ENVIRONMENT": "Testing"
+          }
+        }
+      }
+    }
   }
+
 }
